Delete useless files, basic configuration (routing, SortByName pipe, first service)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,13 @@
 <nav>
 
   <a routerLink="/">Accueil</a>
-  <a routerLink="/Students">Liste des élèves</a>
+  <a routerLink="/about">A propos</a>
+  <a routerLink="/products">Nos produits</a>
+  
+  
 
 </nav>
 
-
+<app-header></app-header>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
