--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<header>
+    <div class="logo-container">
+      <a routerLink="/">
+        <img src="assets/img/logo-au-petit-village.png" alt="Logo Au Petit Village" class="logo" />
+      </a>
+    </div>
+
+
+  
+    <nav>
+      <a routerLink="/" routerLinkActive="active">Accueil</a>
+      <a routerLink="/about" routerLinkActive="active">À propos</a>
+      <a routerLink="/products" routerLinkActive="active">Nos produits</a> 
+      
+    </nav>
+  </header>
+  
+
+
