--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,23 @@
-<p>about works!</p>
+<div class="content">
+    <h1>Notre histoire</h1>
+  
+    <p>
+      "Au petit village" est né d'une passion commune pour l'univers d'Astérix et Obélix et pour l'artisanat traditionnel.
+      Fondée en 2022 par un groupe d’artisans amoureux de la bande dessinée franco-belge, notre entreprise s’est donné pour mission de faire revivre l’esprit gaulois à travers des figurines faites main, uniques et pleines de caractère.
+    </p>
+  
+    <p>
+      Inspirés par les aventures d'Astérix, Obélix et leurs compagnons, nous avons voulu offrir aux fans de tous âges des objets de collection authentiques, fabriqués avec soin dans notre atelier situé au cœur d'un village pittoresque de la campagne française.
+    </p>
+  
+    <p>
+      Chaque figurine est imaginée, sculptée et peinte à la main par nos artistes, dans le respect des personnages originaux, tout en y apportant une touche artisanale unique.      
+    </p>
+  
+    <p>
+      Aujourd'hui, "Au petit village" continue de grandir, porté par la passion de ses créateurs et par l'enthousiasme de ses clients. Merci de faire partie de cette belle aventure avec nous !
+    </p>
+  
+    <a routerLink="/">← Retour à l'accueil</a>
+  </div>
+  
