--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,7 +1,67 @@
-.thumbnail {
-  width: 150px; /* Ajuste la taille */
-  height: auto;
-  margin-right: 10px;
+.content {
+  padding: 2rem;
+  font-family: 'Comfortaa', sans-serif;
+  text-align: center;
+}
+
+
+input[type="text"] {
+  padding: 8px;
+  margin: 1rem auto;
+  width: 300px;
+  max-width: 90%;
+  display: block;
   border-radius: 5px;
-  display: block; /* Assure que l'image s'affiche correctement */
+  border: 1px solid #ccc;
+}
+
+button {
+  background-color: #FDD90B;
+  border: none;
+  padding: 10px 20px;
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 1rem auto;
+  display: block;
+}
+
+button:hover {
+  background-color: #DA001E;
+  color: white;
+}
+
+/* Conteneur des produits */
+.products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 2rem;
+}
+
+.product-card {
+  text-align: center;
+  max-width: 200px;
+}
+
+.thumbnail {
+  width: 150px;
+  height: auto;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+
+a {
+  text-decoration: none;
+  color: #151217;
+}
+
+a:hover {
+  color: #DA001E;
+}
+
+p {
+  margin: 0;
+  font-weight: bold;
 }
