--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,11 +1,15 @@
-<h1>Nos produits</h1>
+<div class="content">
+  <h1>Nos produits</h1>
 
+  <div class="products">
+    <div class="product-card" *ngFor="let product of products">
+      <a [routerLink]="['/product', product.id]">
+        <img [src]="product.picture" alt="{{ product.name }}" class="thumbnail">
+        <h2>{{ product.name }}</h2>
+        <p>{{ product.price }} €</p>
+      </a>
+    </div>
+  </div>
 
-
-<div *ngIf="product">
-    <h2>{{ product.name }}</h2>
-    <img [src]="product.picture" alt="{{ product.name }}">
-    <p>Prix : {{ product.price }}€</p>
+  <a routerLink="/">← Retour à l'accueil</a>
 </div>
-  
-  <a routerLink="/">Retour à l'accueil</a>
